--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,9 @@
         android:text="Nombre de Usuario"
         android:id="@+id/textView01" />
 
-    <EditText
-        android:layout_width="match_parent"
+    <CheckBox
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText01" />
+        android:text="Ver Imagenenes"
+        android:id="@+id/checkBox01" />
 </LinearLayout>
