--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_todo"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:title="@string/menu_todo"/>
+
+    <item
+        android:id="@+id/menu_barato"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:title="@string/menu_barato"/>
+
+    <item
+        android:id="@+id/menu_lujoso"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:title="@string/menu_lujoso"/>
+
 </menu>
