--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,7 @@
         android:showAsAction="never"
         android:title="@string/menu_settings"/>
 
+
     <item
         android:id="@+id/menu_todo"
         android:orderInCategory="100"
@@ -18,14 +19,20 @@
     <item
         android:id="@+id/menu_barato"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/menu_barato"/>
 
     <item
         android:id="@+id/menu_lujoso"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/menu_lujoso"/>
+
+    <item
+        android:id="@+id/menu_mistours"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/menu_mistours"/>
 
 </menu>
 
