Eliminando data de tablas de una base de datos

--- a/app/src/main/res/menu/tour_detalle.xml
+++ b/app/src/main/res/menu/tour_detalle.xml
@@ -7,4 +7,10 @@
         android:showAsAction="always"
         android:title="@string/menu_add"/>
 
+    <item
+        android:id="@+id/menu_borrar"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/menu_borrar"/>
+
 </menu>
